--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         <p>Have a question? Feel free to reach out!</p>
                         <div class="info-item">
                             <span>📧</span>
-                            <p>ok@gmail.com</p>
+                            <p>gautampuskar@gmail.com</p>
                         </div>
                     </div>
 
